added entity for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,8 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=admin
+spring.datasource.password=password
+
+javax.persistence.schema-generation.database.action=create
+javax.persistence.schema-generation.create-script-source=schema.sql
