--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
                             <artifactId>hibernate-core</artifactId>
                             <version>5.4.17.Final</version>
                         </dependency>
+                        <dependency>
+                            <groupId>org.springframework.data</groupId>
+                            <artifactId>spring-data-jpa</artifactId>
+                            <version>2.6.1</version>
+                        </dependency>
                     </dependencies>
                 </plugin>
                 <plugin>
