--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
@@ -17,5 +17,3 @@ spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=admin
 spring.datasource.password=password
 
-javax.persistence.schema-generation.database.action=create
-javax.persistence.schema-generation.create-script-source=schema.sql
