--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.5.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -131,6 +135,7 @@
                             <artifactId>checkstyle</artifactId>
                             <version>10.3</version>
                         </dependency>
+
                         <dependency>
                             <groupId>org.postgresql</groupId>
                             <artifactId>postgresql</artifactId>
@@ -147,11 +152,7 @@
                             <artifactId>hibernate-core</artifactId>
                             <version>5.4.17.Final</version>
                         </dependency>
-                        <dependency>
-                            <groupId>org.springframework.data</groupId>
-                            <artifactId>spring-data-jpa</artifactId>
-                            <version>2.6.1</version>
-                        </dependency>
+
                     </dependencies>
                 </plugin>
                 <plugin>
