--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,9 @@
                     <version>0.8.8</version>
                     <configuration>
                         <output>file</output>
+                        <excludes>
+                            <exclude>**/*MapperImpl.class</exclude>
+                        </excludes>
                     </configuration>
                     <executions>
                         <execution>
@@ -191,6 +194,9 @@
                                 <goal>check</goal>
                             </goals>
                             <configuration>
+                                <excludes>
+                                    <exclude>**/*MapperImpl.class</exclude>
+                                </excludes>
                                 <rules>
                                     <rule>
                                         <element>BUNDLE</element>
