--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.h2.console.enabled=true
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-jdbc.username=${POSTGRES_USER}
-jdbc.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:shareit}
+spring.datasource.username=${POSTGRES_USER:root}
+spring.datasource.password=${POSTGRES_PASSWORD:root}
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=${POSTGRES_USER:test}
+spring.datasource.password=${POSTGRES_PASSWORD:test}
